fix spacing
push watermark to the bottom. fix app overall height

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,11 @@ body {
   border-radius: 10px;
   padding: 20px;
   margin: 20px;
-  min-height: 350px;
+  min-height: 300px;
   max-width: 600px;
   margin: 20px auto;
+  display: flex;
+  flex-direction: column;
   /* align-items: center; */
 }
 
@@ -22,6 +24,7 @@ body {
   .app {
     border: none;
     margin: 0;
+    min-height: 100vh;
   }
 }
 
@@ -77,7 +80,7 @@ header {
 }
 
 .no-task-notification {
-  margin: 10px 15px;
+  flex-grow: 1;
 }
 
 .task {
